[gd_scene load_steps=4 format=3 uid="uid://c3g3xxfejaisr"]

[ext_resource type="Texture2D" uid="uid://db7r4bbmkiubx" path="res://Arte/shield_square.png" id="1_cwh7k"]
[ext_resource type="Script" path="res://Scripts/enemy_bullet.gd" id="1_qtmwl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cwa8y"]
radius = 6.0

[node name="EnemyBullet" type="Node2D"]
script = ExtResource("1_qtmwl")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_cwa8y")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 1, 1)
scale = Vector2(1.2, 1.2)
texture = ExtResource("1_cwh7k")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
